# cameraVideoCapture

./: CMakeLists.txt  README.md  main.cpp  qiproject.xml
